using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace OWL.Core.DTO
{
    public class CategoryDto
    {
        public int Id { get; private set; }

        public string Name { get; private set; }
    }
}
