@startuml OWL

title OWL

class Gamemode {
    + string Name
    + string Description
    + int Amount_players
}


class Character {
    + string Name
    + string Description
    + string Image
    + bool Newly_added
}

class Fightstyle {
    + string Name
    + int Power
    + int Speed
}

class Move {
    + string Name
    + string Description
    + string Image
    + string Motion
}

class News {
    + string Title
    + string Description
    + string Image
}

class Category {
    + string Name
}

Character --> "Move *" Move
Character --> "Fightstyle 1" Fightstyle
News --> "Category*" Category
Gamemode --> "Character *" Character

@enduml